<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <item
        android:id="@+id/player_filter_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_player_all"
        android:title="@string/player_filter"
        app:showAsAction="ifRoom|withText">
        <menu>
            <group
                android:checkableBehavior="all">
            <item
                android:id="@+id/p1_filter_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:title="@string/p1"
                android:text="@string/p1"
                />
            <item
                android:id="@+id/p2_filter_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:title="@string/p2"
                android:text="@string/p2"
                />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/filter_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_filter"
        android:title="@string/tile_filter"
        app:showAsAction="ifRoom|withText">
        <menu>
            <group
                android:checkableBehavior="all">
            <item
                android:id="@+id/x_filter_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:title="@string/X"
                android:text="@string/X"
                />
            <item
                android:id="@+id/o_filter_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:title="@string/O"
                android:text="@string/O"
                />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/play_game_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_play_game"
        android:title="@string/play"
        android:text="@string/play"
        />
    <item
        android:id="@+id/preferences_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_preferences"
        android:title="@string/preferences"
        android:text="@string/preferences"
        app:showAsAction="ifRoom|withText"
        />
    <item
        android:id="@+id/exit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_exit"
        android:title="@string/exit"
        android:text="@string/exit"
        app:showAsAction="ifRoom|withText"
        />
</menu>