<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24pt"
        android:text="@string/tictactoe"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/tictac_1"
                android:background="@drawable/ic_blank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="button"
                android:src="@drawable/ic_squareo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tictac_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/tictac_2"
                android:background="@drawable/ic_blank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:contentDescription="button"
                android:src="@drawable/ic_squareo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tictac_3"
                app:layout_constraintStart_toEndOf="@+id/tictac_1"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/tictac_3"
                android:background="@drawable/ic_blank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="button"
                android:src="@drawable/ic_blank"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tictac_2"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/tictac_4"
                android:background="@drawable/ic_blank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:contentDescription="button"
                android:src="@drawable/ic_squareo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tictac_5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/tictac_5"
                android:background="@drawable/ic_blank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="button"
                android:src="@drawable/ic_squarex"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tictac_6"
                app:layout_constraintStart_toEndOf="@+id/tictac_4"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/tictac_6"
                android:background="@drawable/ic_blank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:contentDescription="button"
                android:src="@drawable/ic_squarex"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tictac_5"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/tictac_7"
                android:background="@drawable/ic_blank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="button"
                android:src="@drawable/ic_blank"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tictac_8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/tictac_8"

                android:background="@drawable/ic_blank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:contentDescription="button"
                android:src="@drawable/ic_blank"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tictac_9"
                app:layout_constraintStart_toEndOf="@+id/tictac_7"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/tictac_9"
                android:background="@drawable/ic_blank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="button"
                android:src="@drawable/ic_blank"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tictac_8"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <Button
        android:id="@+id/play_again_button"
        android:layout_height="50dp"
        android:layout_width="225dp"
        android:layout_marginTop="16dp"
        android:textSize="8pt"
        android:layout_gravity="center"
        android:text="@string/play_again"
        />
    <Button
        android:id="@+id/go_back_button"
        android:layout_height="50dp"
        android:layout_width="225dp"
        android:textSize="8pt"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:text="@string/go_back"
        />

</LinearLayout>